# ieri_oggi

./: .gitignore  CLAUDE.md  README.md  app.py  flake.nix  images.py  models.py  pyproject.toml
ieri_oggi/: __init__.py  __main__.py  app.py  models.py  wsgi.py
ieri_oggi/static/: style.css
ieri_oggi/templates/: base.html  dettaglio.html  form.html  privacy.html
nix/: module.nix  package.nix
static/: style.css
templates/: accedi.html  base.html  dettaglio.html  form.html  gallery.html
